--- a/ionic/Dockerfile
+++ b/ionic/Dockerfile
@@ -1,5 +1,9 @@
 FROM imron02/base-hybrid:1.0.4
 
+# Init git
+RUN git config --global user.email "you@example.com" && \
+    git config --global user.name "Your Name"
+
 # Install ionic package
 RUN npm install -g cordova ionic
 RUN ionic start myApp tutorial --no-interactive
