Update to latest base hybrid and update npm version

--- a/react_native/Dockerfile
+++ b/react_native/Dockerfile
@@ -1,8 +1,8 @@
-FROM imron02/base-hybrid:1.0.6
+FROM imron02/base-hybrid:1.0.7
 
-# Init git
-RUN git config --global user.email "you@example.com" && \
-    git config --global user.name "Your Name"
+# Init git, change user email with your email
+RUN git config --global user.email "imron.r@meteor.id" && \
+    git config --global user.name "Imron Rosdiana"
 
 # Install watchman
 RUN apt-get install -y python-dev lib32stdc++6 lib32z1 \
@@ -17,10 +17,12 @@ RUN apt-get install -y python-dev lib32stdc++6 lib32z1 \
 	&& rm -rf watchman
 
 # Install react native package
-RUN npm install -g react-native-cli \
+RUN npm install -g react-native-cli npm@6.0.1 exp \
 	&& yarn global add react-native-cli \
-	&& react-native init AwesomeProject \
-	&& npm install -g exp
+	&& react-native init AwesomeProject
+
+# Clear all cache & Delete unused package
+RUN rm -rf /tmp/* /var/cache/*
 
 WORKDIR AwesomeProject
 EXPOSE 8081
