--- a/base_hybrid/Dockerfile-alpine
+++ b/base_hybrid/Dockerfile-alpine
@@ -107,5 +107,8 @@ RUN apk add --no-cache --virtual .build-deps-yarn curl gnupg tar \
   && rm yarn-v$YARN_VERSION.tar.gz.asc yarn-v$YARN_VERSION.tar.gz \
   && apk del .build-deps-yarn
 
+# Install Git
+RUN apk add --no-cache git
+
 # Clear all cache & Delete unused package
 RUN rm -rf /tmp/* /var/cache/apk/*
