--- a/react_native/Dockerfile
+++ b/react_native/Dockerfile
@@ -5,16 +5,7 @@ RUN git config --global user.email "imron.r@meteor.id" && \
     git config --global user.name "Imron Rosdiana"
 
 # Install watchman
-RUN apt-get install -y python-dev lib32stdc++6 lib32z1 \
-	&& git clone https://github.com/facebook/watchman.git \
-	&& cd watchman \
-	&& git checkout v4.9.0 \
-	&& ./autogen.sh \
-	&& ./configure \
-	&& make \
-	&& make install \
-	&& cd .. \
-	&& rm -rf watchman
+RUN apk add --no-cache watchman
 
 # Install react native package
 RUN npm install -g react-native-cli npm@6.0.1 exp \
