Update docker file

--- a/react_native/Dockerfile
+++ b/react_native/Dockerfile
@@ -1,11 +1,11 @@
-FROM imron02/base-hybrid:1.0.4-alpine
+FROM imron02/base-hybrid
 
 # Init git, change user email with your email
 RUN git config --global user.email "imron.r@meteor.id" && \
     git config --global user.name "Imron Rosdiana"
 
 # Install watchman
-RUN apk add --no-cache python-dev autoconf automake libtool build-base openssl-dev linux-headers \
+RUN apt-get install -y --no-install-recommends python-dev lib32stdc++6 lib32z1 \
 	&& git clone https://github.com/facebook/watchman.git \
 	&& cd watchman \
 	&& git checkout v4.9.0 \
@@ -22,7 +22,7 @@ RUN npm install -g react-native-cli npm@6.0.1 exp \
 	&& react-native init AwesomeProject
 
 # Clear all cache & Delete unused package
-RUN rm -rf /tmp/* /var/cache/*
+RUN rm -rf /tmp/* /var/lib/apt/lists/*
 
 WORKDIR AwesomeProject
 EXPOSE 8081
